feat(html): add meta descriptions and social meta tags to all pages

--- a/all.html
+++ b/all.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: All
+meta: This is a gallery of all the creative projects posted on this website. 
+featured_image: /images/preview-typography.jpg
 ---
 
 <div class="border-bottom">
