--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Contact
+meta: This is my contact page, if you would like to get in contact with me you can always leave me an e-mail.
+featured_image: /images/e-mail-icon.svg
 ---
 
 {% include profile.html %}
