--- a/illustration/blues-brothers.html
+++ b/illustration/blues-brothers.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Blues Brothers
+meta: This project was an experimentation using the media of a pen and translating that medium into a pure black and white rendered illustration.
+featured_image: /images/illustration/blues-brothers-cover.jpg
 ---
 
 <section>
