--- a/illustration/company-poster.html
+++ b/illustration/company-poster.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Company Poster
+meta: This poster was illustrated as part of a contest entry among designers to create an engaging expressive poster for the play taking place at Kalish Mital Theatre at Carleton University.
+featured_image: /images/illustration/company-poster-cover.jpg
 ---
 
 <section>
