--- a/illustration/index.html
+++ b/illustration/index.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Illustration
+meta: Some of them are flat and graphic in nature such as the poster for Company and the Senators Campaign. While other styles are a bit more fluid using strokes and subtle gradients.
+featured_image: /images/preview-illustration.jpg
 ---
 
 <section>
