--- a/illustration/ottawa-senators-campaign.html
+++ b/illustration/ottawa-senators-campaign.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Ottawa Senators Campaign
+meta: This is a fictitious campaign created of the Ottawa Senators and their messages to promote the public to come watch the hockey players live at the game as opposed to just viewing the game on television.
+featured_image: /images/illustration/senator-campaign-cover.jpg
 ---
 
 <section>
