--- a/illustration/tennis-serve.html
+++ b/illustration/tennis-serve.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Tennis Serve
+meta: This newspaper article is a project I re-visited and created one summer and I really enjoyed the process of creating this illustration.
+featured_image: /images/illustration/the-tennis-serve-cover.jpg
 ---
 
 <section>
