--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 titleAfter: Graphic Designer
+meta: Sebastian Nadeau - My design portfolio showcasing the graphic design work I have done in Ottawa.
+featured_image: /images/preview-typography.jpg
 ---
 
 <!--
