--- a/interactive/ascent-app.html
+++ b/interactive/ascent-app.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Ascent App
+meta: This app was created to help hikers measure their height climbed during a given hike. The app also displays distance covered, calories burned, and progress updates on achieving their goals.
+featured_image: /images/interactive/ascent-app-cover.jpg
 ---
 
 <section>
