--- a/interactive/galactic-adventures.html
+++ b/interactive/galactic-adventures.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Galactic Adventures
+meta: This project was about developing the interactive user experience for a created iPad game called Galactic Adventures.
+featured_image: /images/interactive/galactic-adventures-cover.jpg
 ---
 
 <section>
