--- a/interactive/good-to-talk-app.html
+++ b/interactive/good-to-talk-app.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Good to Talk App
+meta: The idea behind this app is to help people communicate in new areas around the world where they don’t speak the residential language.
+featured_image: /images/interactive/good-to-talk-cover.jpg
 ---
 
 <section>
