--- a/interactive/index.html
+++ b/interactive/index.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Interactive
+meta: This page features some of the different interactive projects I have created at Algonquin College.
+featured_image: /images/preview-interactive.jpg
 ---
 
 <section>
