--- a/interactive/palisar.html
+++ b/interactive/palisar.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Palisar Website Mock-up
+meta: This was a mock-up created for a fictitious e-commerce website called Palisar.
+featured_image: /images/interactive/palisar-cover.jpg
 ---
 
 <section>
