--- a/motion/building-a-portfolio.html
+++ b/motion/building-a-portfolio.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Building a Portfolio
+meta: This video was part of my co-op placement in College to create an engaging teaser for an instructional video on how to prepare a portfolio to enter the Graphic Design program at Algonquin College.
+featured_image: /images/motion/building-a-portfolio-cover.jpg
 ---
 
 <section>
