--- a/motion/demo-reel.html
+++ b/motion/demo-reel.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Demo Reel 2014
+meta: This is my demo reel of 2014 that shows some of the creative projects I have done throughout the years I have been developing designs.
+featured_image: /images/motion/demo-reel-cover.jpg
 ---
 
 <section>
