--- a/motion/index.html
+++ b/motion/index.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Motion
+meta: This is a showcase of some of the motion design pieces I have developed during my time in College.
+featured_image: /images/preview-motion.jpg
 ---
 
 <section>
