--- a/typography/bridgehead.html
+++ b/typography/bridgehead.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Bridgehead
+meta: Designing this brochure for Bridgehead was a extensive project. Bridgehead is a fair trade coffeehouse chain based in Ottawa, Canada. 
+featured_image: /images/typography/bridgehead-cover.jpg
 ---
 
 <section>
