--- a/typography/collage.html
+++ b/typography/collage.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Collage
+meta: This is a mixed media collage that combines both traditional and digital media to create an interesting typographic project. 
+featured_image: /images/typography/collage-cover.jpg
 ---
 
 <section>
