--- a/typography/go-with-the-flow.html
+++ b/typography/go-with-the-flow.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Go with the Flow
+meta: This was a fun little project about presenting 12 practical steps for Learning to Go With the Flow in this layout design. 
+featured_image: /images/typography/go-with-the-flow-cover.jpg
 ---
 
 <section>
@@ -15,7 +17,7 @@ title: Go with the Flow
     <div class="push-top-double push-bottom-double">
         <h1>Go with the Flow – 12 Practical Steps</h1>
         <div id="columns">
-            <p>This was a fun little project about presenting 12 practical steps for Learning to Go With the Flow. There was different takes on layout experimentation and there was also a mood board created to capture the look and feel of peace and tranquility within nature and how that esthetic could be applied to this article’s layout.</p>
+            <p>This was a fun little project about presenting 12 practical steps for Learning to Go With the Flow in this layout design. There was different takes on layout experimentation and there was also a mood board created to capture the look and feel of peace and tranquility within nature and how that esthetic could be applied to this article’s layout.</p>
         </div>
     </div>
     
