--- a/typography/index.html
+++ b/typography/index.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Typography
+meta: These projects will show you a taste of the typographic practice I use within my designs.
+featured_image: /images/preview-typography.jpg
 ---
 
 <section>
