--- a/typography/obsessed-with-speed.html
+++ b/typography/obsessed-with-speed.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 title: Obsessed with Speed
+meta: This spread was all about emphasizing speed. In the way this experimental layout was designed I wanted to play with the use of angles and diagonal movement. 
+featured_image: /images/typography/obsessed-with-speed-cover.jpg
+
 ---
 
 <section>
