--- a/motion/blue-hen-farm.html
+++ b/motion/blue-hen-farm.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Blue Hen Farm
+meta: This broadcast package included an opening title sequence, lower thirds, and transitions. This broadcast package was for a fictitious show called Blue Hen Farm. While the show is fictitious, the actual farm is real.
+featured_image: /images/motion/blue-hen-farm-cover.jpg
 ---
 
 <section>
@@ -15,7 +17,7 @@ title: Blue Hen Farm
     <div class="push-top-double push-bottom-double">
         <h1>Blue Hen Farm – Broadcast Package</h1>
         <div id="columns">
-            <p>This broadcast package included an opening title sequence, lower thirds, and transitions. This broadcast package was for a fictitious show called Blue Hen Farm. While the show is fictitious, the actual farm is real. </p>
+            <p>This broadcast package included an opening title sequence, lower thirds, and transitions. This broadcast package was for a fictitious show called Blue Hen Farm. While the show is fictitious, the actual farm is real.</p>
             <p>I have worked with Nicolai Hadchity who has kindly provided me the video footage to be able to create this broadcast package. My part was to create all the animated motion designs.</p>
         </div>
     </div>
