--- a/motion/tennis-infographic.html
+++ b/motion/tennis-infographic.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Tennis Infographic
+meta: This motion design video brings a tennis infographic that I created to life through movement.
+featured_image: /images/motion/tennis-infographic-cover.jpg
 ---
 
 <section>
@@ -15,7 +17,7 @@ title: Tennis Infographic
     <div class="push-top-double push-bottom-double">
         <h1>Animated Tennis Infographic</h1>
         <div id="columns">
-            <p>You only get one first time for everything. In this case this was my very first motion design video I created in After Effects. It bring a tennis infographic that I created to life through some movement. This was part of  our motion course at Algonquin where we were beginning to learn about keyframe animation, position, rotation, and scale within After Effects.</p>
+            <p>You only get one first time for everything. In this case this was my very first motion design video I created in After Effects. It bring a tennis infographic that I created to life through movement. This was part of  our motion course at Algonquin where we were beginning to learn about keyframe animation, position, rotation, and scale within After Effects.</p>
         </div>
     </div>
     
