--- a/illustration/index.html
+++ b/illustration/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Illustration
-meta: Some of them are flat and graphic in nature such as the poster for Company and the Senators Campaign. While other styles are a bit more fluid using strokes and subtle gradients.
+meta: My style of illustrations provide a mix of flat graphics such as the poster for Company and the Senators Campaign. As well as other styles that are a bit more fluid using strokes and subtle gradients.
 featured_image: /images/preview-illustration.jpg
 ---
 
@@ -16,7 +16,6 @@ featured_image: /images/preview-illustration.jpg
 <div class="push-top-double push-bottom-double">
     <h1>Illustrative Design</h1>
     <div id="columns">
-        <p>These illustrations are a sample of the style I enjoy working in.</p>
-        <p>Some of them are flat and graphic in nature such as the poster for Company and the Senators Campaign. While other styles are a bit more fluid using strokes and subtle gradients mixed with the medium such as in the Tennis Serve. I also enjoy coming with the initial design I will illustrate on paper and in one sample illustration I show how the final rendering was based off the rendered ink drawings.</p>
+        <p>My style of illustrations provide a mix of flat graphics such as the poster for Company and the Senators Campaign. As well as other styles that are a bit more fluid using strokes and subtle gradients. I also enjoy coming with the initial design I will illustrate on paper and in one sample illustration I show how the final rendering was based off the rendered ink drawings.</p>
     </div>
 </div>
