--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 titleAfter: Graphic Designer
-meta: Sebastian Nadeau - My design portfolio showcasing the graphic design work I have done in Ottawa.
+meta: My online graphic design portfolio is a showcase of typography, illustration, interactive media, and motion design.
 featured_image: /images/preview-typography.jpg
 ---
 
