--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 titleAfter: Graphic Designer
 meta: My online graphic design portfolio is a showcase of typography, illustration, interactive media, and motion design.
 featured_image: /images/preview-typography.jpg
+priority: 1.0
 ---
 
 <!--
