--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ priority: 1.0
     CAROUSEL
 -->
     
-<div class="home-page-carousel push-bottom-tripple">
+<div class="home-page-carousel push-top-half push-bottom-tripple">
     <div class="banner-carousel typo"></div>
     <div class="banner-carousel illustration"></div>
     <div class="banner-carousel interactive"></div>
