--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 titleAfter: Graphic Designer
 meta: My online graphic design portfolio is a showcase of typography, illustration, interactive media, and motion design.
-featured_image: /images/preview-typography.jpg
+featured_image: /images/logotype.svg
 priority: 1.0
 ---
 
