feat(all): add unique banner adds to every page

--- a/all.html
+++ b/all.html
@@ -17,7 +17,7 @@ featured_image: /images/preview-typography.jpg
 
 <div class="border-bottom pad-top">
     <section>
-        <figure class="banner illustration">
+        <figure class="banner senator-campaign">
             <figcaption id="tab"><h5>Illustration</h5></figcaption>
         </figure>
     </section>
@@ -37,7 +37,7 @@ featured_image: /images/preview-typography.jpg
 
 <div class="pad-top">
     <section>
-        <figure class="banner motion">
+        <figure class="banner blue-hen-farm">
             <figcaption id="tab"><h5>Motion</h5></figcaption>
         </figure>
     </section>
