--- a/interactive/palisar.html
+++ b/interactive/palisar.html
@@ -6,7 +6,7 @@ featured_image: /images/interactive/palisar-cover.jpg
 ---
 
 <section>
-    <figure class="banner interactive">
+    <figure class="banner palisar">
         <figcaption id="tab">
             <h2>Interactive</h2>
         </figcaption>
