--- a/motion/blue-hen-farm.html
+++ b/motion/blue-hen-farm.html
@@ -6,7 +6,7 @@ featured_image: /images/motion/blue-hen-farm-cover.jpg
 ---
 
 <section>
-    <figure class="banner motion">
+    <figure class="banner blue-hen-farm">
         <figcaption id="tab">
             <h2>Motion</h2>
         </figcaption>
