style(html): add space after toggle menu

--- a/all.html
+++ b/all.html
@@ -5,7 +5,7 @@ meta: This is a gallery of all the creative projects posted on this website.
 featured_image: /images/preview-typography.jpg
 ---
 
-<div class="border-bottom">
+<div class="border-bottom push-top-half">
     <section>
         <figure class="banner typo">
             <figcaption id="tab"><h5>Typography</h5></figcaption>
