--- a/illustration/blues-brothers.html
+++ b/illustration/blues-brothers.html
@@ -6,7 +6,7 @@ featured_image: /images/illustration/blues-brothers-cover.jpg
 ---
 
 <section>
-    <figure class="banner blues-brothers">
+    <figure class="banner blues-brothers push-top-half">
         <figcaption id="tab">
             <h2>Illustration</h2>
         </figcaption>
