--- a/illustration/index.html
+++ b/illustration/index.html
@@ -6,7 +6,7 @@ featured_image: /images/preview-illustration.jpg
 ---
 
 <section>
-    <figure class="banner senator-campaign">
+    <figure class="banner senator-campaign push-top-half">
         <figcaption id="tab"><h2>Illustration</h2></figcaption>
     </figure>
 </section>
