--- a/illustration/company-poster.html
+++ b/illustration/company-poster.html
@@ -6,7 +6,7 @@ featured_image: /images/illustration/company-poster-cover.jpg
 ---
 
 <section>
-    <figure class="banner company-poster">
+    <figure class="banner company-poster push-top-half">
         <figcaption id="tab">
             <h2>Illustration</h2>
         </figcaption>
