--- a/interactive/galactic-adventures.html
+++ b/interactive/galactic-adventures.html
@@ -6,7 +6,7 @@ featured_image: /images/interactive/galactic-adventures-cover.jpg
 ---
 
 <section>
-    <figure class="banner galactic-adventures">
+    <figure class="banner galactic-adventures push-top-half">
         <figcaption id="tab">
             <h2>Interactive</h2>
         </figcaption>
