--- a/motion/index.html
+++ b/motion/index.html
@@ -6,7 +6,7 @@ featured_image: /images/preview-motion.jpg
 ---
 
 <section>
-    <figure class="banner blue-hen-farm">
+    <figure class="banner blue-hen-farm push-top-half">
         <figcaption id="tab"><h2>Motion</h2></figcaption>
     </figure>
 </section>
