--- a/typography/index.html
+++ b/typography/index.html
@@ -6,7 +6,7 @@ featured_image: /images/preview-typography.jpg
 ---
 
 <section>
-    <figure class="banner typo">
+    <figure class="banner typo push-top-half">
         <figcaption id="tab"><h2>Typography</h2></figcaption>
     </figure>
 </section>
