--- a/typography/obsessed-with-speed.html
+++ b/typography/obsessed-with-speed.html
@@ -7,7 +7,7 @@ featured_image: /images/typography/obsessed-with-speed-cover.jpg
 ---
 
 <section>
-    <figure class="banner obsessed-with-speed">
+    <figure class="banner obsessed-with-speed push-top-half">
         <figcaption id="tab">
             <h2>Typography</h2>
         </figcaption>
