refactor(html): renamed website preview images

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 titleAfter: Graphic Designer
 meta: My online graphic design portfolio is a showcase of typography, illustration, interactive media, and motion design.
-featured_image: /images/home-page-preview.jpg
+featured_image: /images/website-preview.jpg
 priority: 1.0
 ---
 
