refactor(all): adjust spacing and copyright date

--- a/illustration/blues-brothers.html
+++ b/illustration/blues-brothers.html
@@ -14,7 +14,7 @@ featured_image: /images/illustration/blues-brothers-cover.jpg
 </section>
 
 <div id="project-wrapper">
-    <div class="push-top-double push-bottom-double">
+    <div class="push-top-double push-bottom-double align-center">
         <h1>The Blues Brothers Album Cover</h1>
         <div id="columns">
             <p>This project was an experimentation using the media of a pen and translating that medium into a pure black and white rendered illustration. This technique was inspired by the technique used in comic books where the pen drawings needed to be rendered at very high contrast for good legibility and print optimization.</p>
