--- a/illustration/company-poster.html
+++ b/illustration/company-poster.html
@@ -14,7 +14,7 @@ featured_image: /images/illustration/company-poster-cover.jpg
 </section>
 
 <div id="project-wrapper">
-    <div class="push-top-double push-bottom-double">
+    <div class="push-top-double push-bottom-double align-center">
         <h1>Company Poster</h1>
         <div id="columns">
             <p>This illustration was one of the earlier illustrations I created and I wanted to show it because I feel it serves as a strong graphic piece to display.</p>
