--- a/illustration/ottawa-senators-campaign.html
+++ b/illustration/ottawa-senators-campaign.html
@@ -14,7 +14,7 @@ featured_image: /images/illustration/senator-campaign-cover.jpg
 </section>
 
 <div id="project-wrapper">
-    <div class="push-top-double push-bottom-double">
+    <div class="push-top-double push-bottom-double align-center">
         <h1>Ottawa Senators Campaign</h1>
         <div id="columns">
             <p>This is a fictitious campaign created of the Ottawa Senators and their messages to promote the public to come watch the hockey players live at the game as opposed to just viewing the game on television.</p>
