--- a/interactive/ascent-app.html
+++ b/interactive/ascent-app.html
@@ -14,7 +14,7 @@ featured_image: /images/interactive/ascent-app-cover.jpg
 </section>
 
 <div id="project-wrapper">
-    <div class="push-top-double push-bottom-double">
+    <div class="push-top-double push-bottom-double align-center">
         <h1>Ascent App</h1>
         <div id="columns">
             <p>This app was created to help hikers measure their height climbed during a given hike. In the addition to their height, the app will be able to give the user a sense of direction with a compass and gps coordinates. The app is structured to also function as a workout app which as well as calculating the height the user has covered, the app measures the distance covered since the beginning of the climb, and a rough estimate of calories burned.</p>
