--- a/interactive/galactic-adventures.html
+++ b/interactive/galactic-adventures.html
@@ -14,7 +14,7 @@ featured_image: /images/interactive/galactic-adventures-cover.jpg
 </section>
 
 <div id="project-wrapper">
-    <div class="push-top-double push-bottom-double">
+    <div class="push-top-double push-bottom-double align-center">
         <h1>Galactic Adventures</h1>
         <div id="columns">
             <p>This project was about developing the interactive user experience for a created iPad game called Galactic Adventures.</p>
