--- a/interactive/good-to-talk-app.html
+++ b/interactive/good-to-talk-app.html
@@ -14,7 +14,7 @@ featured_image: /images/interactive/good-to-talk-cover.jpg
 </section>
 
 <div id="project-wrapper">
-    <div class="push-top-double push-bottom-double">
+    <div class="push-top-double push-bottom-double align-center">
         <h1>Good to Talk App</h1>
         <div id="columns">
             <p>The idea behind this app is to help people communicate in new areas around the world where they don’t speak the residential language.</p>
