--- a/interactive/palisar.html
+++ b/interactive/palisar.html
@@ -14,7 +14,7 @@ featured_image: /images/interactive/palisar-cover.jpg
 </section>
 
 <div id="project-wrapper">
-    <div class="push-top-double push-bottom-double">
+    <div class="push-top-double push-bottom-double align-center">
         <h1>Palisar Website Mock-up</h1>
         <div id="columns">
             <p>This was a mock-up created for a fictitious e-commerce website called Palisar. The website serves to sell snowboarding goods such as snowboards, jackets, T-shirts, pants, goggles, cloves, boots, bindings, etc.</p>
