--- a/motion/blue-hen-farm.html
+++ b/motion/blue-hen-farm.html
@@ -14,7 +14,7 @@ featured_image: /images/motion/blue-hen-farm-cover.jpg
 </section>
 
 <div id="project-wrapper">
-    <div class="push-top-double push-bottom-double">
+    <div class="push-top-double push-bottom-double align-center">
         <h1>Blue Hen Farm – Broadcast Package</h1>
         <div id="columns">
             <p>This broadcast package included an opening title sequence, lower thirds, and transitions. This broadcast package was for a fictitious show called Blue Hen Farm. While the show is fictitious, the actual farm is real.</p>
