--- a/motion/building-a-portfolio.html
+++ b/motion/building-a-portfolio.html
@@ -14,7 +14,7 @@ featured_image: /images/motion/building-a-portfolio-cover.jpg
 </section>
 
 <div id="project-wrapper">
-    <div class="push-top-double push-bottom-double">
+    <div class="push-top-double push-bottom-double align-center">
         <h1>Building a Graphic Design Portfolio</h1>
         <div id="columns">
             <p>This video was part of my co-op placement in College to create an engaging teaser for an instructional video on how to prepare a portfolio to enter the Graphic Design program at Algonquin College.</p>
