--- a/motion/demo-reel.html
+++ b/motion/demo-reel.html
@@ -14,7 +14,7 @@ featured_image: /images/motion/demo-reel-cover.jpg
 </section>
 
 <div id="project-wrapper">
-    <div class="push-top-double push-bottom-double">
+    <div class="push-top-double push-bottom-double align-center">
         <h1>Demo Reel 2014</h1>
         <div id="columns">
             <p>This is my demo reel of 2014 that shows some of the creative projects I have done throughout the years I have been developing designs. Some of the projects shown there are not posted on this website yet they are still valuable to showcase. Most of them have been smaller projects used in conjunction to learning a new tool or technique within the given software being worked in. Others like the Manticore, the book cover concept, were creative projects shown to flex some creative muscles. The last piece of the reel was an undertaking of a project gone through on a course at fxphd where I began to experiment with Red Giant plugins such as Trapcode Particular and Trapcode Form to create some dynamic and realistic special effects within motion graphics.</p>
