--- a/motion/tennis-infographic.html
+++ b/motion/tennis-infographic.html
@@ -14,7 +14,7 @@ featured_image: /images/motion/tennis-infographic-cover.jpg
 </section>
 
 <div id="project-wrapper">
-    <div class="push-top-double push-bottom-double">
+    <div class="push-top-double push-bottom-double align-center">
         <h1>Animated Tennis Infographic</h1>
         <div id="columns">
             <p>You only get one first time for everything. In this case this was my very first motion design video I created in After Effects. It bring a tennis infographic that I created to life through movement. This was part of  our motion course at Algonquin where we were beginning to learn about keyframe animation, position, rotation, and scale within After Effects.</p>
