--- a/typography/bridgehead.html
+++ b/typography/bridgehead.html
@@ -14,7 +14,7 @@ featured_image: /images/typography/bridgehead-cover.jpg
 </section>
 
 <div id="project-wrapper">
-    <div class="push-top-double push-bottom-double">
+    <div class="push-top-double push-bottom-double align-center">
         <h1>Bridgehead – Fair Trade Organic Coffee</h1>
         <div id="columns">
             <p>Designing this brochure for Bridgehead was a extensive project. Bridgehead is a fair trade coffeehouse chain based in Ottawa, Canada. They pride themselves on brewing fresh organic coffee. This brochure mock-up was done for practice and the layouts presented are created for experimentation and concept and are not out commercially on the market.</p>
@@ -25,7 +25,7 @@ featured_image: /images/typography/bridgehead-cover.jpg
         <img src="{{site.baseurl}}/images/photo-icon.svg" alt="Open Image Gallery">
         <p>View Gallery</p>
     </button>
-    
+
     <div class="grid">
         <div class="unit unit-s-1 unit-m-1-2 unit-l-1-2">
             <img src="{{site.baseurl}}/images/typography/bridgehead-2.jpg">
