--- a/typography/collage.html
+++ b/typography/collage.html
@@ -14,7 +14,7 @@ featured_image: /images/typography/collage-cover.jpg
 </section>
 
 <div id="project-wrapper">
-    <div class="push-top-double push-bottom-double">
+    <div class="push-top-double push-bottom-double align-center">
         <h1>Collage with Mixed Media</h1>
         <div id="columns">
             <p>This mixed media collage was done in two steps: The creation and assembly of traditional mixed snippets of photos and type on the right, then the creation of the digital layout on the left. Finally it was then brought together and united to become one piece.</p>
