--- a/typography/go-with-the-flow.html
+++ b/typography/go-with-the-flow.html
@@ -14,7 +14,7 @@ featured_image: /images/typography/go-with-the-flow-cover.jpg
 </section>
 
 <div id="project-wrapper">
-    <div class="push-top-double push-bottom-double">
+    <div class="push-top-double push-bottom-double align-center">
         <h1>Go with the Flow – 12 Practical Steps</h1>
         <div id="columns">
             <p>This was a fun little project about presenting 12 practical steps for Learning to Go With the Flow in this layout design. There was different takes on layout experimentation and there was also a mood board created to capture the look and feel of peace and tranquility within nature and how that esthetic could be applied to this article’s layout.</p>
