--- a/typography/obsessed-with-speed.html
+++ b/typography/obsessed-with-speed.html
@@ -15,7 +15,7 @@ featured_image: /images/typography/obsessed-with-speed-cover.jpg
 </section>
 
 <div id="project-wrapper">
-    <div class="push-top-double push-bottom-double">
+    <div class="push-top-double push-bottom-double align-center">
         <h1>Obsessed with Speed</h1>
         <div id="columns">
             <p>This spread was all about emphasizing speed. In the way this experimental layout was designed I wanted to play with the use of angles and diagonal movement. Even the columns are shifted slightly to apply to the diagonal movement shown in this layout which slightly breaks the traditional linear use of straight columns.</p>
