style(all): make borders for previews

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ priority: 1.0
 PORTFOLIO PREVIEW SECTION
 -->
 
-<div id="preview-wrapper">
+<div class="preview-wrapper">
     <div class="grid previews-home">
         <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
             <a href="{{site.baseurl}}/typography/">
