feat(all): replace images and add new ones

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ priority: 1.0
     <div class="banner-carousel typo"></div>
     <div class="banner-carousel senator-campaign"></div>
     <div class="banner-carousel interactive"></div>
-    <div class="banner-carousel blue-hen-farm"></div>
+    <div class="banner-carousel building-a-portfolio"></div>
 </div>
 				
 
