style(html): change motion banner image

--- a/all.html
+++ b/all.html
@@ -37,7 +37,7 @@ featured_image: /images/preview-typography.jpg
 
 <div class="pad-top">
     <section>
-        <figure class="banner blue-hen-farm">
+        <figure class="banner building-a-portfolio">
             <figcaption id="tab"><h5>Motion</h5></figcaption>
         </figure>
     </section>
