feat(html): create new blog page

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 layout: default
 title: Contact
 meta: This is my contact page, if you would like to get in contact with me you can always leave me an e-mail.
-featured_image: /images/e-mail-icon.svg
+featured_image: /images/brand-logotype.jpg
 ---
 
 {% include profile.html %}
