feat(html): create temporary hashtag links for blog posts

--- a/blog-web-development.html
+++ b/blog-web-development.html
@@ -11,7 +11,7 @@ featured_image: /images/brand-logotype.jpg
     <ul class="grid">
         {% for article in site.categories.web-development %}
         <li class="unit unit-s-1 unit-m-1-2 unit-h-1-3">
-            <a href="">{{article.title}}</a>
+            <a href="#">{{article.title}}</a>
             <p>{{article.meta}}</p>
         </li>
         {% endfor %}
