--- a/blog-mo-graphics.html
+++ b/blog-mo-graphics.html
@@ -10,7 +10,7 @@ featured_image: /images/brand-logotype.jpg
     <ul class="grid">
         {% for article in site.categories.motion-graphics %}
         <li class="unit unit-s-1 unit-m-1-2 unit-h-1-3">
-            <a href="">{{article.title}}</a>
+            <a href="#">{{article.title}}</a>
             <p>{{article.meta}}</p>
         </li>
         {% endfor %}
