style(all): change columns and spacing of type

--- a/interactive/index.html
+++ b/interactive/index.html
@@ -14,8 +14,8 @@ featured_image: /images/preview-interactive.jpg
 {% include interactive.html %}
 
 <div class="push-top-double push-bottom-double">
-    <h1>Interactive Design</h1>
-    <div id="columns">
+    <div class="preview-wrapper">
+        <h1>Interactive Design</h1>
         <p>During my time at Algonquin College I have created some interesting interactive projects.</p>
         <p>One project included building an interactive dvd main menu, another involved building a website mockup in Photoshop for an ecommerce website. Other projects even involved designing a toy for a very young demographic with the focus on developing an intuitive and simple user experience. We also created a mockup for an ipad game where we considered how the user would interact with the interface. More recent projects involved the creation of two iphone apps.</p>
     </div>
