--- a/motion/index.html
+++ b/motion/index.html
@@ -14,8 +14,8 @@ featured_image: /images/preview-motion.jpg
 {% include motion.html %}
 
 <div class="push-top-double push-bottom-double">
-    <h1>Motion Design</h1>
-    <div id="columns">
+    <div class="preview-wrapper">
+        <h1>Motion Design</h1>
         <p>I really love motion design and I plan on developing my skills further in this area.</p>
         <p>I would like to bring sound animation principles woven into graphic design to create beautiful artistic motion graphics. I have some interesting projects posted up that serve to communicate a message through typography and moving graphics. I have my demo reel, a broadcast opener, an explainer video, as well as an animated infographic. These videos were created using After Effects and Illustrator. In the future I also plan on incorporating 3D into my work with Cinema 4D.</p>
     </div>
