--- a/typography/index.html
+++ b/typography/index.html
@@ -14,8 +14,8 @@ featured_image: /images/preview-typography.jpg
 {% include typography.html %}
 
 <div class="push-top-double push-bottom-double">
-    <h1>Typographic Design</h1>
-    <div id="columns">
+    <div class="preview-wrapper">
+        <h1>Typographic Design</h1>
         <p>These projects will show you a taste of the typographic practice I use within my designs.</p>
         <p>I align the contents of the articles and spreads in a grid system. Then I arrange the layout of the spreads in a way that is pleasing to look at, engaging to read, and legible. With some layouts I have been a bit experimental and have moved certain elements outside of the established grid system, while keeping esthetical pleasing spacing and vertical rhythm in mind.</p>
     </div>
