style(css): adjust grid display of portfolio pieces

--- a/illustration/blues-brothers.html
+++ b/illustration/blues-brothers.html
@@ -28,7 +28,7 @@ featured_image: /images/illustration/blues-brothers-cover.jpg
         <p>View Gallery</p>
     </button>
     
-    <div class="grid">
+    <div id="project-wrapper" class="grid">
         <div class="unit unit-s-1 unit-m-1-2 unit-l-1-2">
             <img src="{{site.baseurl}}/images/illustration/blues-brothers-1.jpg">
         </div>
