--- a/illustration/company-poster.html
+++ b/illustration/company-poster.html
@@ -27,7 +27,7 @@ featured_image: /images/illustration/company-poster-cover.jpg
         <p>View Gallery</p>
     </button>
     
-    <div class="grid">
+    <div id="project-wrapper" class="grid">
         <div class="unit unit-s-1 unit-l-2-3">
             <img src="{{site.baseurl}}/images/illustration/company-poster-1.jpg">
         </div>
