--- a/illustration/ottawa-senators-campaign.html
+++ b/illustration/ottawa-senators-campaign.html
@@ -28,7 +28,7 @@ featured_image: /images/illustration/senator-campaign-cover.jpg
         <p>View Gallery</p>
     </button>
     
-    <div class="grid">
+    <div id="project-wrapper" class="grid">
         <div class="unit unit-s-1">
             <img src="{{site.baseurl}}/images/illustration/senator-campaign-1.jpg">
         </div>
