--- a/interactive/palisar.html
+++ b/interactive/palisar.html
@@ -27,7 +27,7 @@ featured_image: /images/interactive/palisar-cover.jpg
         <p>View Gallery</p>
     </button>
     
-    <div class="grid">
+    <div id="project-wrapper" class="grid">
         <div class="unit unit-s-1 unit-m-1-2">
             <img src="{{site.baseurl}}/images/interactive/palisar-1.jpg">
         </div>
