--- a/typography/collage.html
+++ b/typography/collage.html
@@ -27,7 +27,7 @@ featured_image: /images/typography/collage-cover.jpg
         <p>View Gallery</p>
     </button>
     
-    <div class="grid">
+    <div id="project-wrapper" class="grid">
         <div class="unit unit-s-1 unit-m-1 unit-l-1">
             <img src="{{site.baseurl}}/images/typography/collage-1.jpg">
         </div>
