--- a/interactive/good-to-talk-app.html
+++ b/interactive/good-to-talk-app.html
@@ -28,7 +28,7 @@ featured_image: /images/interactive/good-to-talk-cover.jpg
         <p>View Gallery</p>
     </button>
     
-    <div class="grid">
+    <div id="project-wrapper" class="grid">
         <div class="unit unit-s-1">
             <img src="{{site.baseurl}}/images/interactive/good-to-talk-1.jpg">
         </div>
