--- a/motion/building-a-portfolio.html
+++ b/motion/building-a-portfolio.html
@@ -27,7 +27,7 @@ featured_image: /images/motion/building-a-portfolio-cover.jpg
         <p>Watch Video</p>
     </button>
     
-    <div class="grid">
+    <div id="project-wrapper" class="grid">
         <div class="unit unit-s-1 unit-m-1-2 unit-l-1-2">
             <img src="{{site.baseurl}}/images/motion/building-a-portfolio-1.jpg">
         </div>
