--- a/motion/demo-reel.html
+++ b/motion/demo-reel.html
@@ -26,7 +26,7 @@ featured_image: /images/motion/demo-reel-cover.jpg
         <p>Watch Video</p>
     </button>
     
-    <div class="grid">
+    <div id="project-wrapper" class="grid">
         <div class="unit unit-s-1 unit-m-1-2 unit-l-1-2">
             <img src="{{site.baseurl}}/images/motion/demo-reel-1.jpg">
         </div>
