--- a/motion/tennis-infographic.html
+++ b/motion/tennis-infographic.html
@@ -26,7 +26,7 @@ featured_image: /images/motion/tennis-infographic-cover.jpg
         <p>Watch Video</p>
     </button>
     
-    <div class="grid">
+    <div id="project-wrapper" class="grid">
         <div class="unit unit-s-1">
             <img src="{{site.baseurl}}/images/motion/tennis-infographic-1.jpg">
         </div>
