--- a/typography/go-with-the-flow.html
+++ b/typography/go-with-the-flow.html
@@ -26,12 +26,12 @@ featured_image: /images/typography/go-with-the-flow-cover.jpg
         <p>View Gallery</p>
     </button>
     
-    <div class="grid">
-        <div class="unit unit-s-1 unit-m-1-2 unit-l-1-2">
+    <div id="project-wrapper" class="grid">
+        <div class="unit unit-s-1 unit-m-1 unit-l-1">
             <img src="{{site.baseurl}}/images/typography/go-with-the-flow-1.jpg">
         </div>
         
-        <div class="unit unit-s-1 unit-m-1-2 unit-l-1-2">
+        <div class="unit unit-s-1 unit-m-1 unit-l-1">
             <img src="{{site.baseurl}}/images/typography/go-with-the-flow-2.jpg">
         </div>
     </div>
