style(all): made all portfolio piece's banners a solid light grey colour

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@ priority: 1.0
     
 <div class="home-page-carousel push-top-half push-bottom-tripple">
     <div class="banner-carousel typo"></div>
-    <div class="banner-carousel senator-campaign"></div>
+    <div class="banner-carousel illustration"></div>
     <div class="banner-carousel interactive"></div>
-    <div class="banner-carousel building-a-portfolio"></div>
+    <div class="banner-carousel motion"></div>
 </div>
 				
 
