--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ priority: 1.0
     CAROUSEL
 -->
 
-<div class="home-page-carousel push-top-half push-bottom-tripple">
+<div class="home-page-carousel push-bottom-double">
     <div class="banner-carousel typo"></div>
     <div class="banner-carousel illustration"></div>
     <div class="banner-carousel interactive"></div>
@@ -19,7 +19,7 @@ priority: 1.0
 				
 
 <div class="grid about-me clearfix">
-    <div class="unit unit-s-1 unit-m-1-3 photo-container">
+    <div class="unit unit-s-1 unit-m-1-3 unit-h-1-4 photo-container">
         <div class="photo">
             <img class="profile-pic" src="{{site.baseurl}}/images/profile-photo.jpg" alt="Profile Picture">
             <div class="profile-pic photo-overlay">
@@ -29,7 +29,7 @@ priority: 1.0
         </div>
     </div>
     
-    <div class="unit unit-s-1 unit-m-2-3">
+    <div class="unit unit-s-1 unit-m-2-3 unit-h-3-4">
         <div id="columns" class="about-section">
             <h2 id="h2">Portfolio</h2>
             <p>My online graphic design portfolio is a showcase of typography, illustration, interactive media, and motion design. It is my hope that in the next little while you will be inspired by some new thoughts and ideas of new ways of displaying information.</p>
