--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ priority: 1.0
 PORTFOLIO PREVIEW SECTION
 -->
     
-<div class="preview-wrapper">
+<div class="preview-wrapper clearfix">
     <div class="grid previews-home">
         <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
             <a href="{{site.baseurl}}/typography/">
