--- a/interactive/index.html
+++ b/interactive/index.html
@@ -6,7 +6,7 @@ featured_image: /images/preview-interactive.jpg
 ---
 
 <section>
-    <figure class="banner interactive push-top-half">
+    <figure class="banner interactive">
         <figcaption id="tab"><h2>Interactive</h2></figcaption>
     </figure>
 </section>
