--- a/illustration/tennis-serve.html
+++ b/illustration/tennis-serve.html
@@ -6,7 +6,7 @@ featured_image: /images/illustration/the-tennis-serve-cover.jpg
 ---
 
 <section>
-    <figure class="banner the-tennis-serve push-top-half">
+    <figure class="banner the-tennis-serve">
         <figcaption id="tab">
             <h2>Illustration</h2>
         </figcaption>
