--- a/interactive/ascent-app.html
+++ b/interactive/ascent-app.html
@@ -6,7 +6,7 @@ featured_image: /images/interactive/ascent-app-cover.jpg
 ---
 
 <section>
-    <figure class="banner ascent-app push-top-half">
+    <figure class="banner ascent-app">
         <figcaption id="tab">
             <h2>Interactive</h2>
         </figcaption>
