--- a/motion/demo-reel.html
+++ b/motion/demo-reel.html
@@ -6,7 +6,7 @@ featured_image: /images/motion/demo-reel-cover.jpg
 ---
 
 <section>
-    <figure class="banner demo-reel push-top-half">
+    <figure class="banner demo-reel">
         <figcaption id="tab">
             <h2>Motion</h2>
         </figcaption>
