--- a/motion/tennis-infographic.html
+++ b/motion/tennis-infographic.html
@@ -6,7 +6,7 @@ featured_image: /images/motion/tennis-infographic-cover.jpg
 ---
 
 <section>
-    <figure class="banner tennis-infographic push-top-half">
+    <figure class="banner tennis-infographic">
         <figcaption id="tab">
             <h2>Motion</h2>
         </figcaption>
