--- a/typography/go-with-the-flow.html
+++ b/typography/go-with-the-flow.html
@@ -6,7 +6,7 @@ featured_image: /images/typography/go-with-the-flow-cover.jpg
 ---
 
 <section>
-    <figure class="banner go-with-the-flow push-top-half">
+    <figure class="banner go-with-the-flow">
         <figcaption id="tab">
             <h2>Typography</h2>
         </figcaption>
