--- a/illustration/ottawa-senators-campaign.html
+++ b/illustration/ottawa-senators-campaign.html
@@ -6,7 +6,7 @@ featured_image: /images/illustration/senator-campaign-cover.jpg
 ---
 
 <section>
-    <figure class="banner senator-campaign push-top-half">
+    <figure class="banner senator-campaign">
         <figcaption id="tab">
             <h2>Illustration</h2>
         </figcaption>
