--- a/interactive/good-to-talk-app.html
+++ b/interactive/good-to-talk-app.html
@@ -6,7 +6,7 @@ featured_image: /images/interactive/good-to-talk-cover.jpg
 ---
 
 <section>
-    <figure class="banner good-to-talk-app push-top-half">
+    <figure class="banner good-to-talk-app">
         <figcaption id="tab">
             <h2>Interactive</h2>
         </figcaption>
