--- a/typography/bridgehead.html
+++ b/typography/bridgehead.html
@@ -6,7 +6,7 @@ featured_image: /images/typography/bridgehead-cover.jpg
 ---
 
 <section>
-    <figure class="banner bridgehead push-top-half">
+    <figure class="banner bridgehead">
         <figcaption id="tab">
             <h2>Typography</h2>
         </figcaption>
