--- a/typography/cirque-du-soleil.html
+++ b/typography/cirque-du-soleil.html
@@ -6,7 +6,7 @@ featured_image: /images/typography/bridgehead-cover.jpg
 ---
 
 <section>
-    <figure class="banner cirque push-top-half">
+    <figure class="banner cirque">
         <figcaption id="tab">
             <h2>Typography</h2>
         </figcaption>
