--- a/typography/collage.html
+++ b/typography/collage.html
@@ -6,7 +6,7 @@ featured_image: /images/typography/collage-cover.jpg
 ---
 
 <section>
-    <figure class="banner collage push-top-half">
+    <figure class="banner collage">
         <figcaption id="tab">
             <h2>Typography</h2>
         </figcaption>
