feat(all): create contact form

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ priority: 1.0
         <div class="photo">
             <img class="profile-pic" src="{{site.baseurl}}/images/profile-photo.jpg" alt="Profile Picture">
             <div class="profile-pic photo-overlay">
-                <h5 id="name">Sebastian Nadeau</h5>
+                <h5 id="sebastian">Sebastian Nadeau</h5>
                 <h6>Graphic Designer</h6>
             </div>
         </div>
