fix(html): fix typo on contact form

--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@ featured_image: /images/brand-logotype.jpg
                   <select id="request_for" name="request_for">
                       <option value="illustration">Illustration</option>
                       <option value="logo_design">Logo Design</option>
-                      <option value="motion_graphics">Motion Grahics</option>
+                      <option value="motion_graphics">Motion Graphics</option>
                       <option value="print">Print</option>
                       <option value="web_development">Web Development</option>
                       <option value="other">Other</option>
